refined merchant order view and client order view, fixed sign-out, aligned back button on edit product view

--- a/css/main.css
+++ b/css/main.css
@@ -481,7 +481,8 @@ input[type=password]:focus {
 	.addProductButton {
 		margin-left: 117px;
 	}
-	.addLocationButton {
+	.addLocationButton,
+	.editProductButton {
 		margin-left: 196px;
 	}
 }
